# cgatools

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  cgatools-build-msvs.cmd
cgatools/cgdata/: CnvDetailStore.cpp  CnvDetailStore.hpp  CnvSegmentStore.cpp  CnvSegmentStore.hpp  Dnb.cpp
cgatools/command/: CallDiff.cpp  CallDiff.hpp  Command.cpp  Command.hpp  Evidence2Sam.cpp  JunctionType.cpp  MkVcf.cpp  VarFileCombine.cpp  VarFileCombine.hpp  VarFilter.cpp
cgatools/conv/: VcfRecordSource.cpp  VcfRecordSource.hpp
cgatools/copynumber/: CnvFileVcfSource.cpp  CnvFileVcfSource.hpp
cgatools/reference/: RangeAnnotationStore.hpp
cgatools/util/: DelimitedFile.cpp  DelimitedFile.hpp
cgatools/variants/: Allele.cpp  Allele.hpp  Call.cpp  Call.hpp  Locus.cpp  PhasedHypothesis.cpp  PhasedHypothesis.hpp  Superlocus.cpp  VariantFileIterator.cpp  VariantFileIterator.hpp  VariantFileVcfSource.cpp  VariantFileVcfSource.hpp
cgatoolsexe/: cgatools.cpp  cgatoolscommandmap.hpp
dataprep/: cutMaps.py  prepLib.py  prepgeneannotation.py  preprmsk.py  prepsegdup.py
doc/: CMakeLists.txt  doxygen.cfg
docs/: README.txt  cgatools-command-line-reference.html  index.html  style.css
docs/api/html/: AlleleAlignment_8hpp.html  AlleleAlignment_8hpp_source.html  AlleleDiffSegment_8hpp.html  AlleleDiffSegment_8hpp_source.html  Allele_8hpp.html  Allele_8hpp_source.html  BaseUtil_8hpp.html  BaseUtil_8hpp_source.html  CalibratedScorer_8hpp.html  CalibratedScorer_8hpp_source.html  CallDiffMatchType_8hpp.html  CallDiffMatchType_8hpp_source.html  CallDiffResult_8hpp.html  CallDiffResult_8hpp_source.html  CallDiff_8hpp.html  CallDiff_8hpp_source.html  Call_8hpp.html  Call_8hpp_source.html  ChromosomeIdField_8hpp.html  ChromosomeIdField_8hpp_source.html  Cigar_8hpp.html  Cigar_8hpp_source.html  CnvDetailStore_8hpp.html  Command_8hpp.html  (+583 more)
smoketest/: CMakeLists.txt  CompileHeader.cpp  cpplint.py
smoketest/api/util/: TestAssertPositive.cpp  TestBaseUtil.cpp  TestDelimitedFile.cpp  TestDelimitedLineParser.cpp  TestException.cpp  TestMd5.cpp  TestParse.cpp  TestRangeIntersector.cpp
smoketest/api/variants/: TestCall.cpp
smoketest/cmd/conv/: evidence2cache0.py  evidence2sam0.py  evidence2sam1.py  map2sam0.py  mapmerge0.py
smoketest/cmd/junctions/: testj2events.py  testjunctdiff.py
smoketest/cmd/misc/: join0.py
smoketest/cmd/reference/: testcrr0.py
smoketest/cmd/tutil/: tucore.py
smoketest/cmd/util/: md5test0.py
smoketest/cmd/variants/: calldiff0.py  listvariants0.py  snpdiff0.py  testvariants0.py  varcombine0.py  varcombine1.py  varfilter0.py
smoketest/data/common/GS19240-180-36-21-ASM/GS00028-DNA_C01/ASM/: geneVarSummary-GS19240-180-36-21-ASM.tsv  summary-GS19240-180-36-21-ASM.tsv  var-GS19240-180-36-21-ASM.tsv
smoketest/data/common/GS19240-180-36-21-ASM/GS00028-DNA_C01/ASM/EVIDENCE/: correlation-GS19240-180-36-21-ASM.tsv  evidenceDnbs-chr21-GS19240-180-36-21-ASM.tsv  evidenceIntervals-chr21-GS19240-180-36-21-ASM.tsv
smoketest/data/common/GS19240-180-36-21-ASM/GS00028-DNA_C01/ASM/REF/: coverageRefScore-chr21-GS19240-180-36-21-ASM.tsv
smoketest/data/common/GS19240-180-36-21-ASM/GS00028-DNA_C01/LIB/GS00648-CLS_C05/: lib_DNB_GS00648-CLS_C05.tsv  lib_gaps_L0_GS00648-CLS_C05.tsv  lib_gaps_L1_GS00648-CLS_C05.tsv  lib_gaps_M_GS00648-CLS_C05.tsv  lib_gaps_R0_GS00648-CLS_C05.tsv  lib_gaps_R1_GS00648-CLS_C05.tsv  lib_gaps_rollup_L_GS00648-CLS_C05.tsv  lib_gaps_rollup_R_GS00648-CLS_C05.tsv
smoketest/data/common/GS19240-180-36-21-ASM/GS00028-DNA_C01/MAP/GS10364-FS3-L01/: mapping_GS10364-FS3-L01_001.tsv  reads_GS10364-FS3-L01_001.tsv
smoketest/data/conv/evidence2cache0/: GS10364-FS3-L04_5.tsv  evidenceDnbs-chr21-GS19240-180-36-21-ASM.tsv  evidenceIntervals-chr21-GS19240-180-36-21-ASM.tsv
smoketest/data/conv/evidence2sam0/: TestRef.fa  evidenceDnbs-chr22-male36_100.sam  evidenceDnbs-chr22-male36_100.tsv
smoketest/data/conv/evidence2sam1/: evidenceDnbs-chr1-human37-4-35-10-10-10-5.sam  evidenceDnbs-chr1-human37-4-35-10-10-10-5.tsv  evidenceDnbs-chr21-human37-2-30-10-10-10.sam  evidenceDnbs-chr21-human37-2-30-10-10-10.tsv
smoketest/data/conv/map2sam0/: GS10364-FS3-L01_001.sam  TestRef.fa  mapping_GS10364-FS3-L01_001.tsv  reads_GS10364-FS3-L01_001.tsv
smoketest/data/conv/mapmerge0/: GS10364-FS3-L04_5.sam  mapping_GS10364-FS3-L04_005.tsv.bz2  reads_GS10364-FS3-L04_005.tsv.bz2
smoketest/data/conv/mapmerge0/cache/chr21/: GS10364-FS3-L04_5.tsv
smoketest/data/junctions/junctiondiff0/: diff-junctions0.tsv  junctions0.tsv  junctions1.tsv  report.tsv
smoketest/data/junctions/junctions2events/: genes.tsv  out0-AnnotatedJunctions.tsv  out0-Events.tsv  repmask.tsv
smoketest/data/misc/join0/: ann.tsv  join-compact-always.tsv  join-compact-pct-always.tsv  join-compact-pct.tsv  join-compact.tsv  join-full-always.tsv  join-full.tsv  var.tsv
smoketest/data/variants/: TestRef.fa  TestRmsk.tsv  var-00.tsv  var-01.tsv  var-02.tsv  var-03.tsv  var-04.tsv  var-05.tsv  var-06.tsv  var-07.tsv  var-08.tsv  var-09.tsv  var-10.tsv  var-11.tsv  var-12.tsv  var-13.tsv
smoketest/data/variants/calldiff0/: cd-00-00-DebugCallOutput.tsv  cd-00-00-DebugSuperlocusOutput.tsv  cd-00-00-LocusOutput.tsv  cd-00-00-LocusStats.tsv  cd-00-00-SuperlocusOutput.tsv  cd-00-09-DebugCallOutput.tsv  cd-00-09-DebugSuperlocusOutput.tsv  cd-00-09-LocusOutput.tsv  cd-00-09-LocusStats.tsv  cd-00-09-SuperlocusStats.tsv
smoketest/data/variants/listvariants0/: variant-listing-00-09.tsv  variant-listing-00.tsv
smoketest/data/variants/snpdiff0/: gen-Stats.tsv  gen-Verbose.tsv  gen2-Output.tsv  gen2-Stats.tsv  gen2-Verbose.tsv  genotypes.tsv  genotypes2.tsv  genotypes3.tsv  genotypes4.tsv
smoketest/data/variants/testvariants0/: tested-variants-00-09.tsv  variant-listing-00.tsv
smoketest/data/variants/varcombine0/: a-var-11.tsv  a-var-12.tsv  b-var-11.tsv
smoketest/data/variants/varcombine1/: cd-00-00-LocusOutput.tsv  cd-00-00-SuperlocusStats.tsv  cd-00-09-LocusOutput.tsv  cd-00-09-LocusStats.tsv  cd-00-09-SuperlocusOutput.tsv  gen-Output.tsv  gen-Verbose.tsv
smoketest/data/variants/varfilter0/: a-var-13.tsv  b-var-13.tsv
(+115 files in other folders)
